--- a/src/App.css
+++ b/src/App.css
@@ -63,11 +63,25 @@ form {
   gap: .5em;
 }
 
+input[type="number"] {
+  text-align: center;
+}
+/* https://stackoverflow.com/questions/14218307/select-arrow-style-change */
+/* select {
+  background: url("data:image/svg+xml,<svg height='10px' width='10px' viewBox='0 0 16 16' fill='%23000000' xmlns='http://www.w3.org/2000/svg'><path d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/></svg>") no-repeat;
+  background-position: calc(100% - 0.75rem) center !important;
+  -moz-appearance:none !important;
+  -webkit-appearance: none !important; 
+  appearance: none !important;
+  padding-right: 2rem !important;
+} */
+
 input, select {
   margin-bottom: .5em;
   font-family: 'Inter';
   font-size: 1rem;
   padding: .5em;
+  /* border-radius: 5px; */
   outline: none;
 }
 
@@ -88,6 +102,7 @@ input, select {
 
 .start-btn:hover {
   background: #5868b4;
+  font-size: 1.1rem;
 }
 
 
@@ -165,6 +180,10 @@ input, select {
   color: #293264;
 }
 
+.blue-hover:hover {
+  background-color: #D6DBF5;
+}
+
 .choice-label {
   cursor: pointer;
   width: 100%;
@@ -188,6 +207,7 @@ input, select {
 
 .check-answers-btn:hover {
   background: #5868b4;
+  font-size: 1.1rem;
 }
 
 
@@ -235,6 +255,7 @@ input, select {
 
 .reset-btn:hover {
   background: #5868b4;
+  font-size: 1.1rem;
 }
 
 
@@ -286,4 +307,46 @@ input[type="radio"] {
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+
+/* fade in, credit to https://stackoverflow.com/questions/11679567/using-css-for-a-fade-in-effect-on-page-load */
+.intro-container, 
+.questions-container, 
+.check-answers-btn {
+
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 2s; /* Firefox < 16 */
+      -ms-animation: fadein 2s; /* Internet Explorer */
+       -o-animation: fadein 2s; /* Opera < 12.1 */
+          animation: fadein 2s;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
